--- a/backend-mapv1/src/main/resources/application.properties
+++ b/backend-mapv1/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=9096
 
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=gradproject
+
 spring.data.mongodb.uri=mongodb+srv://team-zeus:Zeus-Lightning@insurance-transactions.6ymsw.mongodb.net/test
 spring.data.mongodb.database=test
 
