--- a/.github/workflows/dev2_insurance-backendv1.yml
+++ b/.github/workflows/dev2_insurance-backendv1.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install
+      working-directory: backend-mapv1
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
