--- a/.github/workflows/dev2_insurance-backendv1.yml
+++ b/.github/workflows/dev2_insurance-backendv1.yml
@@ -26,8 +26,9 @@ jobs:
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
+      
       with:
         app-name: 'insurance-backendv1'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_783c570bfefe4b1ca2ec5484c71c4029 }}
-        package: '${{ github.workspace }}/target/*.jar'
+        package: '${{ github.workspace }}/backend-mapv1/target/*.jar'
