--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,12 +5,10 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: backend_testing
 
 jobs:
-  build:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -21,5 +19,9 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean
       working-directory: backend-mapv1
+    - name: Testing
+      run: mvn install
+      working-directory: backend-mapv1
+
