--- a/main-app/package.json
+++ b/main-app/package.json
@@ -25,11 +25,13 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.0",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.27.13",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
