--- a/backend-mapv1/src/main/resources/application.properties
+++ b/backend-mapv1/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=9096
 
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=gradproject
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=gradproject
 
 #spring.data.mongodb.uri=mongodb+srv://team-zeus:Zeus-Lightning@insurance-transactions.6ymsw.mongodb.net/test
-spring.data.mongodb.uri=mongodb+srv://team-zeus:Zeus-Lightning@insurance-transactions.6ymsw.mongodb.net/test?retryWrites=true&w=majority
-spring.data.mongodb.database=test
+#spring.data.mongodb.uri=mongodb+srv://team-zeus:Zeus-Lightning@insurance-transactions.6ymsw.mongodb.net/test?retryWrites=true&w=majority
+s#pring.data.mongodb.database=test
 
 spring.application.name=partner-service
 logging.file.name=/home/anorak/Documents/work/Intellij/axis-project-grad/backend-mapv1/my.log
