--- a/backend-mapv1/pom.xml
+++ b/backend-mapv1/pom.xml
@@ -15,6 +15,9 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<!-- Note: If your ACR name contains upper case characters, be sure to convert them to lower case characters. -->
+		<docker.image.prefix>insuranceregistry.azurecr.io</docker.image.prefix>
+		<jib-maven-plugin.version>2.5.2</jib-maven-plugin.version>
 		<java.version>11</java.version>
 		<kotlin.version>1.4.21</kotlin.version>
 	</properties>
@@ -110,6 +113,20 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<artifactId>jib-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<version>${jib-maven-plugin.version}</version>
+				<configuration>
+					<from>
+						<image>mcr.microsoft.com/java/jdk:11-zulu-alpine</image>
+					</from>
+					<to>
+						<image>${docker.image.prefix}/${project.artifactId}</image>
+					</to>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	<repositories>
