--- a/backend-mapv1/src/main/resources/application.properties
+++ b/backend-mapv1/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=9096
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb-service
+#spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gradproject
 
@@ -9,7 +10,7 @@ spring.data.mongodb.database=gradproject
 
 #spring.data.mongodb.database=test
 
-spring.application.name=partner-service
+spring.application.name=insurance-backend
 # Setup profiles
 #logging.file.name=/home/anorak/Documents/work/Intellij/axis-project-grad/backend-mapv1/my.log
 
