--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -1,7 +1,24 @@
 on: [push]
 jobs:
-  build-and-deploy:
+  build-package:
     runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Maven
+      run: mvn clean verify
+      working-directory: backend-mapv1
+    - name: package
+      run: mvn package
+      working-directory: backend-mapv1
+
+  publish-and-deploy:
+    runs-on: ubuntu-latest
+    needs: [build-package]
     steps:
     - uses: actions/checkout@master
     
