(fix)package-structure

--- a/backend-mapv1/src/main/resources/application.properties
+++ b/backend-mapv1/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.database=gradproject
 
 spring.application.name=insurance-backend
 # Setup profiles
-#logging.file.name=${user.dir}/my.log
+logging.file.name=${user.dir}/my.log
 
 
 
