--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -1,10 +1,31 @@
-on: [push]
+name: Deploy to AKS -> deployment
+on:
+  push: 
+    branches:
+      - 'deployment'
+
 jobs:
-  build-and-deploy:
+  build-test:
+    name: Test - Unit tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Maven Package
+        run: mvn clean package -DskipTests
+        working-directory: backend-mapv1
+      - name: Maven Verify
+        run: mvn clean verify  
+        working-directory: backend-mapv1
+     
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build-test ]
+    steps:
+    - uses: actions/checkout@master  
     - uses: azure/docker-login@v1
       with:
         login-server: insuranceregistry.azurecr.io
@@ -14,7 +35,7 @@ jobs:
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/backend-mapv1" -f  "backend-mapv1/Dockerfile" -t insuranceregistry.azurecr.io/insuranceteststagging:${{ github.sha }}
+        docker build "$GITHUB_WORKSPACE/backend" -f  "backend/Dockerfile" -t insuranceregistry.azurecr.io/insuranceteststagging:${{ github.sha }}
         docker push insuranceregistry.azurecr.io/insuranceteststagging:${{ github.sha }}
     
     - uses: azure/k8s-set-context@v1
@@ -42,8 +63,7 @@ jobs:
       with:
         namespace: default
         manifests: |
-          manifests/deployment-1.yml
-          manifests/service-1.yml
+          manifests/deployment-backend-stagging.yml
         images: |
           insuranceregistry.azurecr.io/insuranceteststagging:${{ github.sha }}
         imagepullsecrets: |
