--- a/main-app/Dockerfile
+++ b/main-app/Dockerfile
@@ -1,19 +1,22 @@
-FROM node:12
-
-# Create app directory
+# Docker Image which is used as foundation to create
+# a custom Docker Image with this Dockerfile
+FROM node:10
+ 
+# A directory within the virtualized Docker environment
+# Becomes more relevant when using Docker Compose later
 WORKDIR /usr/src/app
-
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
+ 
+# Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
-
-# RUN npm install
-# If you are building your code for production
-RUN npm install --only=production
-
-# Bundle app source
+ 
+# Installs all node packages
+RUN npm install
+ 
+# Copies everything over to Docker environment
 COPY . .
-
+ 
+# Uses port which is used by the actual application
 EXPOSE 3000
+ 
+# Finally runs the application
 CMD [ "npm", "start" ]
