--- a/main-app/package.json
+++ b/main-app/package.json
@@ -40,6 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://insurance-service:9096",
   "eslintConfig": {
     "extends": [
       "react-app",
