(update)project-structure

--- a/backend-mapv1/src/main/resources/application.properties
+++ b/backend-mapv1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9096
 
-spring.data.mongodb.host=mongodb-service
-#spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=mongodb-service
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=gradproject
 
@@ -11,8 +11,9 @@ spring.data.mongodb.database=gradproject
 #spring.data.mongodb.database=test
 
 spring.application.name=insurance-backend
+wavefront.application.name=insuranceBackend
 # Setup profiles
-logging.file.name=${user.dir}/my.log
+#logging.file.name=${user.dir}/my.log
 
 
 
