--- a/main-app/package.json
+++ b/main-app/package.json
@@ -35,12 +35,11 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://insurance-service:9096",
   "eslintConfig": {
     "extends": [
       "react-app",
